# Macaroni-pirates

./: .gitignore  CMakeLists.txt  Makefile  README.md  ally_tex  player_last_round.mot  save.json  scores.txt  stackify.py  trash_tex
src/: macros.hpp  main.cpp
src/game/: player_profile.hpp  score_store.cpp  score_store.hpp
src/game/ally/: ally.cpp  ally.hpp  ally_tex
src/game/enemy/: enemy.cpp  enemy.hpp  enemy_inv_tex  enemy_tex  enemy_tex_extern.hpp  trash_tex  trash_tex_extern.hpp
src/game/map/: map.cpp  map.hpp  sand_tex
src/game/player/: player.cpp  player.hpp  player_alt_tex  player_motion.hpp  player_replay.cpp  player_replay.hpp  player_tex
src/game/player/cannonball/: cannonball.cpp  cannonball.hpp  cannonball_tex
src/manager/: game_state.cpp  game_state.hpp
src/manager/process/: process.cpp  process.hpp  process_manager.cpp  process_manager.hpp
src/math/: aabb.hpp
src/renderer/: circle_mask_lookup.hpp  renderer.cpp  renderer.hpp
src/renderer/drawable/: drawable.cpp  drawable.hpp
src/renderer/font/: font_renderer.cpp  font_renderer.hpp
src/texture/: texture.cpp  texture.hpp
src/ui/: game_ui.cpp  game_ui.hpp  leaderboard_view.cpp  leaderboard_view.hpp  main_menu.cpp  main_menu.hpp  pause_menu.cpp  pause_menu.hpp  ui_button.cpp  ui_button.hpp  ui_text_field.cpp  ui_text_field.hpp
